# compass

./: CMakeLists.txt  compass.apparmor  manifest.json.in
app/: CMakeLists.txt  Main.qml  compass.desktop.in
app/graphics/: CMakeLists.txt  CMakeLists.txt~
app/tests/autopilot/: run
app/tests/autopilot/compass/tests/: __init__.py  test_main.py
backend/: CMakeLists.txt
backend/modules/Compass/: backend.cpp  backend.h  mytype.cpp  mytype.h  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: CMakeLists.txt  compass.kwek.pot  fr.po  sl.po
